--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -42,18 +42,18 @@
                 </div>
               </div>
               {% if page.goal %}
-              <div class="row row-cols-2 pb-5">
+              <div class="row row-cols-2 g-0 pb-5">
                 {% if page.goal.home %}
                 <ul class="col list-group">
                   {% for goal in page.goal.home %}
-                  <li class="list-group-item text-end text-capitalize text-white bg-transparent"><small>{{ goal.time | append: "'" }}</small><span class="ps-2">{{ goal.name }}</span></li>
+                  <li class="list-group-item text-end text-capitalize text-white bg-transparent"><small class="text-secondary">{{ goal.time | append: "'" }}</small><span class="ps-2">{{ goal.name }}</span></li>
                   {% endfor %}
                 </ul>
                 {% endif %}
                 {% if page.goal.away %}
                 <ul class="col list-group">
                   {% for goal in page.goal.away %}
-                  <li class="list-group-item text-start text-capitalize text-white bg-transparent"><span class="pe-2">{{ goal.name }}</span><small>{{ goal.time | append: "'" }}</small></li>
+                  <li class="list-group-item text-start text-capitalize text-white bg-transparent"><span class="pe-2">{{ goal.name }}</span><small class="text-secondary">{{ goal.time | append: "'" }}</small></li>
                   {% endfor %}
                 </ul>
                 {% endif %}
