--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -44,16 +44,16 @@
               {% if page.goal %}
               <div class="row row-cols-2 g-0 pb-5">
                 {% if page.goal.home %}
-                <ul class="col list-group">
+                <ul class="col list-group border-0">
                   {% for goal in page.goal.home %}
-                  <li class="list-group-item text-end text-capitalize text-white bg-transparent pb-1"><small class="text-secondary">{{ goal.time | append: "'" }}</small><span class="ps-2">{{ goal.name }}</span></li>
+                  <li class="list-group-item text-end text-capitalize text-white bg-transparent pb-0"><small class="text-secondary">{{ goal.time | append: "'" }}</small><span class="ps-2">{{ goal.name }}</span></li>
                   {% endfor %}
                 </ul>
                 {% endif %}
                 {% if page.goal.away %}
-                <ul class="col list-group">
+                <ul class="col list-group border-0">
                   {% for goal in page.goal.away %}
-                  <li class="list-group-item text-start text-capitalize text-white bg-transparent pb-1"><span class="pe-2">{{ goal.name }}</span><small class="text-secondary">{{ goal.time | append: "'" }}</small></li>
+                  <li class="list-group-item text-start text-capitalize text-white bg-transparent pb-0"><span class="pe-2">{{ goal.name }}</span><small class="text-secondary">{{ goal.time | append: "'" }}</small></li>
                   {% endfor %}
                 </ul>
                 {% endif %}
