--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -46,14 +46,14 @@
                 {% if page.goal.home %}
                 <ul class="col list-group">
                   {% for goal in page.goal.home %}
-                  <li class="list-group-item text-end text-capitalize text-white bg-transparent border-0 pb-0"><small class="text-secondary">{{ goal.time | append: "'" }}</small><span class="ps-2">{{ goal.name }}</span></li>
+                  <li class="list-group-item text-end text-capitalize text-white bg-transparent border-0 pb-0 lh-1"><small class="text-secondary">{{ goal.time | append: "'" }}</small><small class="ps-2">{{ goal.name }}</small></li>
                   {% endfor %}
                 </ul>
                 {% endif %}
                 {% if page.goal.away %}
                 <ul class="col list-group">
                   {% for goal in page.goal.away %}
-                  <li class="list-group-item text-start text-capitalize text-white bg-transparent border-0 pb-0"><span class="pe-2">{{ goal.name }}</span><small class="text-secondary">{{ goal.time | append: "'" }}</small></li>
+                  <li class="list-group-item text-start text-capitalize text-white bg-transparent border-0 pb-0 lh-1"><small class="pe-2">{{ goal.name }}</small><small class="text-secondary">{{ goal.time | append: "'" }}</small></li>
                   {% endfor %}
                 </ul>
                 {% endif %}
