--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -33,9 +33,9 @@
                   </span>
                 </div>
                 {% if match.status == "next match" %}
-                <div class="col"><span class="fw-bold text-uppercase">vs</span></div>
+                <div class="col"><span class="fw-bold text-uppercase fs-1">vs</span></div>
                   {% else %}
-                <div class="col"><span class="fw-bold text-uppercase">{{ match.result }}</span></div>
+                <div class="col"><span class="fw-bold text-uppercase fs-1">{{ match.result }}</span></div>
                 {% endif %}
                 <div class="col">
                   <img src="{% if match.away.logo %}{{ match.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block mx-auto border-0 pb-2" width="75" height="75">
@@ -44,6 +44,24 @@
                   </span>
                 </div>
               </div>
+              {% if match.goal %}
+              <div class="row row-cols-2 g-0 pb-5">
+                {% if match.goal.home %}
+                <ul class="col list-group">
+                  {% for goal in match.goal.home %}
+                  <li class="list-group-item text-end text-capitalize text-white bg-transparent border-0 pb-0 lh-1"><small class="text-secondary">{{ goal.time | append: "'" }}</small><small class="ps-2">{{ goal.name }}</small></li>
+                  {% endfor %}
+                </ul>
+                {% endif %}
+                {% if match.goal.away %}
+                <ul class="col list-group">
+                  {% for goal in match.goal.away %}
+                  <li class="list-group-item text-start text-capitalize text-white bg-transparent border-0 pb-0 lh-1"><small class="pe-2">{{ goal.name }}</small><small class="text-secondary">{{ goal.time | append: "'" }}</small></li>
+                  {% endfor %}
+                </ul>
+                {% endif %}
+              </div>
+              {% endif %}
               <p class="card-text text-capitalize text-secondary">{{ match.place }}</p>
             </div> 
           </div>
