--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -21,11 +21,11 @@
         {% for match in matches limit:1 %}
         <div class="col">
           <div class="card bg-transparent text-white border-0">
-            <div class="card-body py-3">
+            <div class="card-body">
               <h1 class="text-uppercase fw-bolder pb-5">{{ match.status }}</h1>
               <p class="card-text fw-bolder mb-0"><small class="text-uppercase">{{ match.type }}</small> • <small class="text-uppercase">{{ match.competition }}</small></p>
               <p class="card-text text-secondary"><small class="text-uppercase">{{ match.kickoff }}</small></p>
-              <div class="row row-cols-3 text-center py-5">
+              <div class="row row-cols-3 text-center py-3">
                 <div class="col">
                   <img src="{% if match.home.logo %}{{ match.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg | relative_url' }}{% endif %}" alt="" class="d-block mx-auto border-0 pb-2" width="75" height="75">
                   <span class="fw-bold text-uppercase">
