--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,14 @@
 <footer class="bg-light">
   <div class="container py-5">
+    <div class="row row-cols-2">
+      <div class="col mx-auto">
+        <img src="{{ '/assets/img/logo-1-new.svg' | relative_url }}" alt="" class="rounded-0" width="45" height="45">
+      </div>
+      <div class="col">
+        <img src="{{ '/assets/img/POK.svg' | relative_url }}" alt="" class="rounded-0" width="45" height="45">
+        <img src="{{ '/assets/img/yeni-sembako.svg' | relative_url }}" alt="" class="" width="45" height="45">
+      </div>
+    </div>
     <div class="text-center text-secondary"><small>© 2022 TESA FOOTBALL CLUB.</small></div>
   </div>
 </footer>
