--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,6 @@
         <img src="{{ '/assets/img/yeni-sembako.svg' | relative_url }}" alt="" class="border-0" width="45" height="60">
       </div>
     </div>
-    <div class="text-center text-secondary pt-5"><small>© 2022 TESA FOOTBALL CLUB.</small></div>
   </div>
+  <div class="text-center text-secondary pb-5"><small>© 2022 TESA FOOTBALL CLUB.</small></div>
 </footer>
