--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="bg-light">
-  <div class="container d-flex justify-content-between py-5">
-    <div class="row row-cols-2">
-      <div class="col">
+  <div class="container py-3">
+    <div class="d-flex justify-content-center">
+      <div>
         <img src="{{ '/assets/img/logo-1-new.svg' | relative_url }}" alt="" class="border-0" width="45" height="45">
       </div>
-      <div class="col">
+      <div>
         <img src="{{ '/assets/img/POK.svg' | relative_url }}" alt="" class="border-0" width="45" height="60">
         <img src="{{ '/assets/img/yeni-sembako.svg' | relative_url }}" alt="" class="border-0" width="45" height="60">
       </div>
