--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 <footer class="bg-light">
   <div class="container py-3">
-    <div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-between align-items-center">
       <div>
         <img src="{{ '/assets/img/logo-1-new.svg' | relative_url }}" alt="" class="border-0" width="45" height="45">
       </div>
       <div>
-        <img src="{{ '/assets/img/POK.svg' | relative_url }}" alt="" class="border-0" width="45" height="75">
-        <img src="{{ '/assets/img/yeni-sembako.svg' | relative_url }}" alt="" class="border-0" width="45" height="75">
+        <img src="{{ '/assets/img/POK.svg' | relative_url }}" alt="" class="border-0" width="45" height="90">
+        <img src="{{ '/assets/img/yeni-sembako.svg' | relative_url }}" alt="" class="border-0 ps-3" width="45" height="90">
       </div>
     </div>
   </div>
