--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="bg-light">
   <div class="container py-3">
-    <div class="d-flex justify-content-between align-items-center">
+    <div class="d-flex justify-content-between align-items-center text-secondary">
       <div>
         <img src="{{ '/assets/img/logo-1-new.svg' | relative_url }}" alt="" class="border-0" width="45" height="45">
       </div>
