--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,10 @@
 <footer class="bg-light">
   <div class="container py-3">
-    <div class="d-flex justify-content-between align-items-center text-secondary">
-      <div>
-        <img src="{{ '/assets/img/logo-1-new.svg' | relative_url }}" alt="" class="border-0" width="45" height="45">
-      </div>
+    <div class="d-flex justify-content-center align-items-center text-secondary">
       <div>
         <img src="{{ '/assets/img/POK.svg' | relative_url }}" alt="" class="border-0" width="60" height="90">
-        <img src="{{ '/assets/img/yeni-sembako.svg' | relative_url }}" alt="" class="border-0 ps-2" width="60" height="70">
+        <img src="{{ '/assets/img/yeni-sembako.svg' | relative_url }}" alt="" class="border-0 px-2" width="60" height="70">
+        <img src="{{ '/assets/img/redline.svg' | relative_url }}" alt="" class="border-0" width="60" height="90">
       </div>
     </div>
   </div>
