--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="bg-light">
   <div class="container py-3">
-    <div class="d-flex justify-content-center align-items-center text-secondary">
+    <div class="d-flex justify-content-evenly align-items-center">
       <div>
         <img src="{{ '/assets/img/POK.svg' | relative_url }}" alt="" class="border-0" width="100" height="100">
         <img src="{{ '/assets/img/yeni-sembako.svg' | relative_url }}" alt="" class="border-0 px-3" width="100" height="100">
