--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -19,7 +19,7 @@
         <div class="col">
           <div class="card text-white bg-transparent">
             <div class="card-body">
-              <h1 class="text-uppercase fw-bolder pb-5">{{ page.status }}</h1>
+              <h1 class="text-uppercase fw-bolder pb-5">{{ page.result.status }}</h1>
               <p class="text-uppercase fw-bolder mb-0"><small>{{ page.type }} • {{ page.competition }}</small></p>
               <p class="text-uppercase text-secondary"><small>{{ page.kickoff }}</small></p>
               <div class="row row-cols-3 text-center py-3">
@@ -32,7 +32,7 @@
                 {% if page.status == "next match" %}
                 <div class="col"><span class="text-uppercase fw-bolder fs-1">vs</span></div>
                   {% else %}
-                <div class="col"><span class="text-uppercase fw-bolder fs-1">{{ page.result }}</span></div>
+                <div class="col"><span class="text-uppercase fw-bolder fs-1">{{ page.result.score }}</span></div>
                 {% endif %}
                 <div class="col">
                   <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' }}{% endif %}" alt="" class="d-block mx-auto border-0 rounded-circle pb-2" width="75" height="75">
@@ -41,18 +41,18 @@
                   </span>
                 </div>
               </div>
-              {% if page.goal %}
+              {% if page.result.status == "full time" %}
               <div class="row row-cols-2 g-0 pb-5">
-                {% if page.goal.home %}
+                {% if page.result.goal.home %}
                 <ul class="col list-group">
-                  {% for goal in page.goal.home %}
+                  {% for goal in page.result.goal.home %}
                   <li class="list-group-item text-end text-capitalize text-white bg-transparent border-0 pb-0 lh-1"><small class="text-secondary">{{ goal.time | append: "'" }}</small><small class="ps-2">{{ goal.name }}</small></li>
                   {% endfor %}
                 </ul>
                 {% endif %}
-                {% if page.goal.away %}
+                {% if page.result.goal.away %}
                 <ul class="col list-group">
-                  {% for goal in page.goal.away %}
+                  {% for goal in page.result.goal.away %}
                   <li class="list-group-item text-start text-capitalize text-white bg-transparent border-0 pb-0 lh-1"><small class="pe-2">{{ goal.name }}</small><small class="text-secondary">{{ goal.time | append: "'" }}</small></li>
                   {% endfor %}
                 </ul>
