--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -13,9 +13,9 @@ header: header-match
             <div class="card-header d-flex justify-content-between">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
               <div>
-                <img src="{{ page.home.logo | relative_url }}" alt="" class="border-0 rounded-circle" width="45" height="45">
+                <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="45" height="45">
                 <span class="text-uppercase fw-bolder px-2">vs</span>
-                <img src="{{ page.away.logo | relative_url }}" alt="" class="border-0 rounded-circle" width="45" height="45">
+                <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0 rounded-circle" width="45" height="45">
               </div>
             </div>
             <div class="pt-5 pb-3 text-white bg-transparent">
