--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -1,4 +1,4 @@
-<header style="min-height: 480px; background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%; height: auto;">
+<header style="min-height: 480px; background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6), (rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%; height: auto;">
   <div class="text-white">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
@@ -8,9 +8,9 @@
         </a>
         <nav class="nav col-12 col-md-auto justify-content-center mb-md-0">
           {% assign currentPage = page.url %}
-          <a {% if currentPage == '/' %} class="nav-link link-secondary px-2" {% else %} class="nav-link link-light px-2" {% endif %} href="/">Home</a>
-          <a {% if currentPage == '/players/' %} class="nav-link link-secondary px-2" {% else %} class="nav-link link-light px-2" {% endif %} href="{{ 'players' | relative_url }}">Players</a>
-          <a {% if currentPage == '/matches/' %} class="nav-link link-secondary px-2" {% else %} class="nav-link link-light px-2" {% endif %} href="{{ 'matches' | relative_url }}">Matches</a>
+          <a {% if currentPage == '/' %} class="nav-link link-secondary fw-bolder px-2" {% else %} class="nav-link link-light fw-bolder px-2" {% endif %} href="/">Home</a>
+          <a {% if currentPage == '/players/' %} class="nav-link link-secondary fw-bolder px-2" {% else %} class="nav-link link-light fw-bolder px-2" {% endif %} href="{{ 'players' | relative_url }}">Players</a>
+          <a {% if currentPage == '/matches/' %} class="nav-link link-secondary fw-bolder px-2" {% else %} class="nav-link link-light fw-bolder px-2" {% endif %} href="{{ 'matches' | relative_url }}">Matches</a>
         </nav>
       </div>
     </div>
