--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -1,4 +1,4 @@
-<header>
+<!--<header>
   <div class="text-white" style="height: 720px; background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
@@ -20,6 +20,31 @@
       </div>
       <div>
         <span class="text-uppercase fw-bolder" style="font-size: 6rem;">{{ page.no-punggung }}</span>
+      </div>
+    </div>
+  </div>
+</header>-->
+
+<header style="min-height: 720px; background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%; height: auto;">
+  <div class="text-white">
+    <div class="container pt-3">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
+        <a href="/" class="d-flex align-items-center col-md-3 link-light text-decoration-none text-uppercase fw-bold">
+          <img src="{{ '/assets/img/logo-2-new.svg' | relative_url }}" alt="" class="border-0 shadow pe-2" width="35" height="35">
+          {{ site.title }}
+        </a>
+        <nav class="nav col-12 col-md-auto justify-content-center mb-md-0">
+          {% assign currentPage = page.url %}
+          <a {% if currentPage == '/' %} class="nav-link link-secondary fw-bolder px-2" {% else %} class="nav-link link-light fw-bolder px-2" {% endif %} href="/">Home</a>
+          <a {% if currentPage == '/players/' %} class="nav-link link-secondary fw-bolder px-2" {% else %} class="nav-link link-light fw-bolder px-2" {% endif %} href="{{ 'players' | relative_url }}">Players</a>
+          <a {% if currentPage == '/matches/' %} class="nav-link link-secondary fw-bolder px-2" {% else %} class="nav-link link-light fw-bolder px-2" {% endif %} href="{{ 'matches' | relative_url }}">Matches</a>
+        </nav>
+      </div>
+    </div>
+    <div class="container-sm">
+      <div class="d-flex flex-column justify-content-end">
+        <div class="fs-1 fw-bolder text-uppercase">{{ page.no-punggung }}</div>
+        <div class="fs-3 fw-bolder text-capitalize">{{ page.title }}</div>
       </div>
     </div>
   </div>
