--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -41,7 +41,7 @@
         </nav>
       </div>
     </div>
-    <div class="container-sm">
+    <div class="container-sm h-100">
       <div class="d-flex flex-column justify-content-end">
         <div class="fs-1 fw-bolder text-uppercase">{{ page.no-punggung }}</div>
         <div class="fs-3 fw-bolder text-capitalize">{{ page.title }}</div>
