--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -25,7 +25,7 @@
   </div>
 </header>-->
 
-<header style="min-height: 720px; background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%; height: auto;">
+<header style="min-height: 480px; background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%; height: auto;">
   <div class="text-white">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
@@ -41,8 +41,8 @@
         </nav>
       </div>
     </div>
-    <div class="container-sm h-100">
-      <div class="d-flex flex-column justify-content-end">
+    <div class="container-sm">
+      <div class="d-flex flex-column justify-content-end h-100">
         <div class="fs-1 fw-bolder text-uppercase">{{ page.no-punggung }}</div>
         <div class="fs-3 fw-bolder text-capitalize">{{ page.title }}</div>
       </div>
