--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="h-100">
-      <div class="d-flex flex-column justify-content-end h-100">
+      <div class="h-100 d-flex flex-column justify-content-end">
         <div class="fs-1 fw-bolder text-uppercase">{{ page.no-punggung }}</div>
         <div class="fs-3 fw-bolder text-capitalize">{{ page.title }}</div>
       </div>
