--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -26,7 +26,7 @@
 </header>-->
 
 <header style="height: 720px; background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%;">
-  <div class="text-white">
+  <div class="h-100 text-white">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 link-light text-decoration-none text-uppercase fw-bold">
