--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -25,7 +25,7 @@
   </div>
 </header>-->
 
-<header style="height: 480px; background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%;">
+<header style="height: 720px; background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%;">
   <div class="h-100 text-white">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="h-100 container-sm">
-      <div class="h-100 d-flex flex-column justify-content-end align-items-center">
+      <div class="mh-100 d-flex flex-column justify-content-end align-items-center">
         <div class="fs-1 fw-bolder text-uppercase">{{ page.no-punggung }}</div>
         <div class="fs-3 fw-bolder text-capitalize">{{ page.title }}</div>
       </div>
