--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -41,8 +41,8 @@
         </nav>
       </div>
     </div>
-    <div class="h-100 container-sm">
-      <div class="mh-100 d-flex flex-column justify-content-end align-items-center">
+    <div class="mh-100 container-sm">
+      <div class="h-100 d-flex flex-column justify-content-end align-items-center">
         <div class="fs-1 fw-bolder text-uppercase">{{ page.no-punggung }}</div>
         <div class="fs-3 fw-bolder text-capitalize">{{ page.title }}</div>
       </div>
