--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -41,7 +41,7 @@
         </nav>
       </div>
     </div>
-    <div class="mh-100 container-sm">
+    <div class="mh-100 container-sm bg-white text-dark">
       <div class="h-100 d-flex flex-column justify-content-end align-items-center">
         <div class="fs-1 fw-bolder text-uppercase">{{ page.no-punggung }}</div>
         <div class="fs-3 fw-bolder text-capitalize">{{ page.title }}</div>
