--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -26,7 +26,7 @@
 </header>-->
 
 <header style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%;">
-  <div class="text-white" style="height: 720px;">
+  <div class="d-flex flex-column justify-content-between text-white" style="height: 720px;">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 link-light text-decoration-none text-uppercase fw-bold">
@@ -41,8 +41,8 @@
         </nav>
       </div>
     </div>
-    <div class="h-100 container-sm bg-white text-dark">
-      <div class="h-100 d-flex flex-column justify-content-end align-items-center">
+    <div class="container-sm bg-white text-dark">
+      <div>
         <div class="fs-1 fw-bolder text-uppercase">{{ page.no-punggung }}</div>
         <div class="fs-3 fw-bolder text-capitalize">{{ page.title }}</div>
       </div>
