--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -25,8 +25,8 @@
   </div>
 </header>-->
 
-<header style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%;">
-  <div class="d-flex flex-column justify-content-between text-white" style="height: 720px;">
+<header style="min-height: 480px; background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%;">
+  <div class="d-flex flex-column justify-content-between text-white">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 link-light text-decoration-none text-uppercase fw-bold">
@@ -41,7 +41,7 @@
         </nav>
       </div>
     </div>
-    <div class="container-sm bg-white text-dark">
+    <div class="container-sm">
       <div>
         <div class="fs-1 fw-bolder text-uppercase">{{ page.no-punggung }}</div>
         <div class="fs-3 fw-bolder text-capitalize">{{ page.title }}</div>
