--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -25,8 +25,8 @@
   </div>
 </header>-->
 
-<header style="height: 480px; background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%;">
-  <div class="d-flex flex-column justify-content-between text-white">
+<header style="height: 560px; background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%;">
+  <div class="h-100 d-flex flex-column justify-content-between text-white">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 link-light text-decoration-none text-uppercase fw-bold">
@@ -43,8 +43,8 @@
     </div>
     <div class="container-sm">
       <div class="pb-3">
-        <div class="fs-1 fw-bolder text-uppercase">{{ page.no-punggung }}</div>
-        <div class="fs-3 fw-bolder text-capitalize">{{ page.title }}</div>
+        <div class="fs-1 fw-bolder text-uppercase" style="font-size: 5rem;">{{ page.no-punggung }}</div>
+        <div class="fs-3 fw-bolder text-capitalize" style="font-size: 3rem;">{{ page.title }}</div>
       </div>
     </div>
   </div>
