--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -43,8 +43,8 @@
     </div>
     <div class="container-sm">
       <div class="pb-3">
-        <div class="fs-1 fw-bolder text-uppercase" style="font-size: 5rem;">{{ page.no-punggung }}</div>
-        <div class="fs-3 fw-bolder text-capitalize" style="font-size: 3rem;">{{ page.title }}</div>
+        <div class="fw-bolder text-uppercase" style="font-size: 5rem;">{{ page.no-punggung }}</div>
+        <div class="fw-bolder text-capitalize" style="font-size: 3rem;">{{ page.title }}</div>
       </div>
     </div>
   </div>
