--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -25,7 +25,7 @@
   </div>
 </header>-->
 
-<header style="height: 560px; background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%;">
+<header style="height: 560px; background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%;">
   <div class="h-100 d-flex flex-column justify-content-between text-white">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
@@ -42,9 +42,9 @@
       </div>
     </div>
     <div class="container-sm">
-      <div class="pb-3">
-        <div class="fw-bolder text-uppercase" style="font-size: 5rem;">{{ page.no-punggung }}</div>
-        <div class="fw-bolder text-capitalize" style="font-size: 3rem;">{{ page.title }}</div>
+      <div class="pb-5">
+        <div class="fw-bolder text-center text-uppercase" style="font-size: 5rem;">{{ page.no-punggung }}</div>
+        <div class="fw-bolder text-center text-capitalize" style="font-size: 3rem;">{{ page.title }}</div>
       </div>
     </div>
   </div>
