--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -8,9 +8,9 @@
         </a>
         <nav class="nav col-12 col-md-auto justify-content-center mb-md-0">
           {% assign currentPage = page.url %}
-          <a {% if currentPage == '/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 text-white" {% endif %} href="/">Home</a>
-          <a {% if currentPage == '/players/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 text-white" {% endif %} href="{{ 'players' | relative_url }}">Players</a>
-          <a {% if currentPage == '/matches' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 text-white" {% endif %} href="{{ 'matches' | relative_url }}">Matches</a>
+          <a {% if currentPage == '/' %} class="nav-link px-2 link-secondary fw-bolder" {% else %} class="nav-link px-2 text-white fw-bolder" {% endif %} href="/">Home</a>
+          <a {% if currentPage == '/players/' %} class="nav-link px-2 link-secondary fw-bolder" {% else %} class="nav-link px-2 text-white fw-bolder" {% endif %} href="{{ 'players' | relative_url }}">Players</a>
+          <a {% if currentPage == '/matches' %} class="nav-link px-2 link-secondary fw-bolder" {% else %} class="nav-link px-2 text-white fw-bolder" {% endif %} href="{{ 'matches' | relative_url }}">Matches</a>
         </nav>
       </div>
     </div>
