--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -9,7 +9,7 @@ header: header-match
     <div class="container-sm bg-transparent py-5">
       <div class="row row-cols-1">
         <div class="col">
-          <div class="card text-white bg-transparent border-0">
+          <div class="card text-white bg-transparent border-0" style="background-image: url('{{ page.lineup-image-fg }}'); background-repeat; no-repeat; background-position: right 45px bottom 20px;">
             <div class="card-header border-0 d-flex justify-content-between">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
               <div>
