--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -20,7 +20,7 @@
       <div class="row row-cols-1">
         {% for match in matches limit:1 %}
         <div class="col">
-          <div class="card bg-transparent text-white border border-white">
+          <div class="card bg-transparent text-white border border-dark">
             <div class="card-body">
               <h1 class="text-uppercase fw-bolder pb-5">{{ match.status }}</h1>
               <p class="card-text fw-bolder mb-0"><small class="text-uppercase">{{ match.type }}</small> • <small class="text-uppercase">{{ match.competition }}</small></p>
