--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -59,7 +59,7 @@
                 {% endif %}
               </div>
               {% endif %}
-              <p class="card-text text-capitalize fw-bolder text-secondary pt-3">{{ page.place }}</p>
+              <p class="card-text text-capitalize fw-bolder text-secondary pt-3"><img src="{{ '/assets/img/icon/location-dot-solid.svg' | relative_url }}" alt="" width="25" height="25">{{ page.place }}</p>
             </div>
           </div>
         </div>
