--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -1,6 +1,6 @@
 
 <header class="text-white bg-dark" style="height: 720px; background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-  <div class="h-100" style="backdrop-filter: blur(1px); -webkit-backdrop-filter: blur(3px);">
+  <div class="h-100">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bold text-uppercase">
