--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -62,7 +62,7 @@
                 {% endif %}
               </div>
               {% endif %}
-              <p class="card-text text-capitalize text-secondary">{{ match.place }}</p>
+              <p class="card-text text-capitalize text-secondary"><i class="fa-solid fa-location-dot text-secondary"></i>{{ match.place }}</p>
             </div> 
           </div>
         </div>
