--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -42,7 +42,7 @@
                 </div>
               </div>
               {% if page.result.status == "full time" %}
-              <div class="row row-cols-2 g-0 pb-5">
+              <div class="row row-cols-2 g-0 px-0 pb-5">
                 {% if page.result.goal.home %}
                 <ul class="col list-group">
                   {% for goal in page.result.goal.home %}
